<resources>
    <string name="app_name">InstagramClone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_2">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in_2">Log In.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>