<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LaunchScreenActivity">


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="69dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:padding="1dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#0394F4"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="65dp"
        android:src="@drawable/nux_dayone_landing_logo"
        app:srcCompat="@drawable/nux_dayone_landing_logo" />

    <Button
        android:id="@+id/btnPasswordVisibility"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/etPassword"
        android:layout_alignEnd="@id/etPassword"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="2dp"
        android:background="#00FFFFFF"
        app:icon="@drawable/ic_invisible"
        app:iconPadding="1dp" />

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:padding="4dp"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="#0394F4"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="459dp"
        android:layout_height="54dp"
        android:layout_below="@id/btnForgotPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#660394F4"
        android:backgroundTintMode="src_atop"
        android:text="@string/log_in" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/ivLogo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:background="#292727"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="#ACABAB"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/etUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="#292727"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPersonName|textWebPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="#ACABAB"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        android:layout_toStartOf="@+id/btnSignUp"
        android:gravity="center_vertical|end"
        android:text="@string/don_t_have_an_account"
        android:textColor="#ACABAB" />

</RelativeLayout>